# Queue-System

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  queue_system_docs.md  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
Schema/: README.md  config.schema.json  erd.mmd  message.schema.json  schema.sql  table_notes.md
docs/: api.md  architecture.md  delivery_guarantees.md  demo_script.md  migrations.md  operations.md  security.md  sqlite_atomic_claims.md  state_transitions.md  workers.md
scripts/: run-worker.ps1  run-worker.sh
src/simplequeue/: __init__.py  config.py  defaults.py
src/simplequeue/cache/: __init__.py  stats_cache.py  ttl_cache.py
src/simplequeue/cli/: __init__.py  _shared.py  demos.py  main.py  shutdown.py
src/simplequeue/cli/commands/: __init__.py  consume.py  demo.py  dlq.py  init_db.py  inspect.py  list_queues.py  peek.py  produce.py  purge.py  stats.py  sweep.py  verify.py
src/simplequeue/core/: __init__.py  delivery.py  exceptions.py  message.py  modes.py  queue.py  results.py  states.py  validation.py
src/simplequeue/observability/: __init__.py  events.py  logging.py  stats.py
src/simplequeue/reliability/: __init__.py  dlq.py  idempotency.py  leases.py  receipt_handles.py  retry.py
src/simplequeue/scheduling/: __init__.py  clock.py  scheduler.py  sweeper.py
src/simplequeue/storage/: __init__.py  base.py  factory.py  migrations.py  schema.sql  serializers.py  sqlite_backend.py
src/simplequeue/teaching/: __init__.py  unsafe_ack_by_message_id.py  unsafe_cache_as_source_of_truth.py  unsafe_no_visibility_timeout.py  unsafe_select_then_update.py
src/simplequeue/workers/: __init__.py  claim_budget.py  processor.py  shutdown.py  worker.py  worker_pool.py
tests/: conftest.py
tests/cli/: test_cli_purge.py  test_cli_smoke.py  test_cli_verify.py
tests/concurrency/: test_atomic_claim.py  test_round5.py
tests/integration/: test_comprehensive_semantics.py  test_fixes.py  test_purge.py  test_queue_semantics.py  test_regressions.py  test_round5_backend.py  test_sqlite_polish.py  test_verify.py
tests/teaching/: test_unsafe_examples_demonstrate_failure.py
tests/unit/: test_claim_budget.py  test_cli_coverage_gaps.py  test_cli_shutdown.py  test_cli_unit.py  test_clock_scheduler_observability.py  test_config.py  test_consume_command.py  test_implemented_fixes.py  test_maximum_coverage.py  test_models_cache_and_states.py  test_modes_config_results.py  test_module_inventory.py  test_package_and_worker_internals.py  test_public_api.py  test_queue_worker_edges.py  test_reliability_helpers.py  test_remaining_coverage.py  test_round2_fixes.py  test_round3_fixes.py  test_round4_fixes.py  test_round5_fixes.py  test_serializers.py  test_storage_coverage_polish.py  test_storage_internals.py
tests/workers/: test_shutdown_and_join.py  test_worker_pool.py
