[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simplequeue-system"
version = "0.1.0"
description = "A durable SQLite-backed queue library and CLI with at-most-once, at-least-once, retries, DLQ, and workers."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Queue System Library" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
# Compatible ranges; exact pins for reproducible runs live in requirements-dev.txt.
dev = [
  "pytest>=8,<10",
  "pytest-cov>=6,<8",
  "mypy>=1.8,<3",
  "ruff>=0.9,<1",
]

[project.scripts]
simplequeue = "simplequeue.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
simplequeue = ["storage/schema.sql", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.coverage.run]
source = ["simplequeue"]
branch = false

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["simplequeue"]
strict = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "UP042"]
