[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "simplequeue-system"
version = "0.2.1"
description = "A durable SQLite-backed queue library and CLI with at-most-once, at-least-once, retries, DLQ, and workers."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Princeton Afeez" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "queue",
  "sqlite",
  "message-queue",
  "at-least-once",
  "at-most-once",
  "dead-letter-queue",
  "worker",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
# Compatible ranges; exact pins for reproducible runs live in requirements-dev.txt.
dev = [
  "pytest>=8,<10",
  "pytest-cov>=6,<8",
  "mypy>=1.8,<3",
  "ruff>=0.9,<1",
]

[project.scripts]
simplequeue = "simplequeue.cli.main:main"

[project.urls]
Repository = "https://github.com/PrincetonAfeez/Queue-System"
Issues = "https://github.com/PrincetonAfeez/Queue-System/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
simplequeue = ["storage/schema.sql", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.coverage.run]
source = ["simplequeue"]
branch = false

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
show_missing = true
skip_covered = false
fail_under = 95

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["simplequeue"]
strict = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501", "UP042"]
